--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,222 @@
 absl-py==2.1.0
+aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+anyio==3.7.1
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
 astunparse==1.6.3
+async-lru==2.0.4
+asyncer==0.0.2
+attrs==23.2.0
+Babel==2.15.0
+beautifulsoup4==4.12.3
+bidict==0.23.1
+bleach==6.1.0
 certifi==2024.6.2
+cffi==1.16.0
+chainlit==1.1.202
 charset-normalizer==3.3.2
+chevron==0.14.0
 chex==0.1.86
+click==8.1.7
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+dataclasses-json==0.5.14
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
 etils==1.9.0
+executing==2.0.1
+fastapi==0.110.3
+fastapi-socketio==0.0.10
+fastjsonschema==2.19.1
 filelock==3.14.0
+filetype==1.2.0
 flatbuffers==24.3.25
 flax==0.8.4
+fonttools==4.53.0
+fqdn==1.5.1
+frozenlist==1.4.1
 fsspec==2024.5.0
 gast==0.5.4
 google-pasta==0.2.0
+googleapis-common-protos==1.63.1
 grpcio==1.64.0
+h11==0.14.0
 h5py==3.11.0
+httpcore==1.0.5
+httpx==0.27.0
 huggingface-hub==0.23.2
 idna==3.7
+importlib_metadata==7.1.0
 importlib_resources==6.4.0
+ipykernel==6.29.4
+ipython==8.25.0
+ipywidgets==8.1.3
+isoduration==20.11.0
 jax==0.4.28
 jaxlib==0.4.28
+jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+jupyterlab_widgets==3.0.11
 keras==3.3.3
+kiwisolver==1.4.5
+langchain==0.2.3
+langchain-core==0.2.5
+langchain-text-splitters==0.2.1
+langsmith==0.1.75
+Lazify==0.4.0
 libclang==18.1.1
+literalai==0.0.601
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+marshmallow==3.21.3
+matplotlib==3.9.0
+matplotlib-inline==0.1.7
+matplotlip==0.2
 mdurl==0.1.2
+mistune==3.0.2
 ml-dtypes==0.3.2
 mpmath==1.3.0
 msgpack==1.0.8
+multidict==6.0.5
+mypy-extensions==1.0.0
 namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.3
+notebook==7.2.0
+notebook_shim==0.2.4
 numpy==1.26.4
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-exporter-otlp-proto-http==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
 opt-einsum==3.3.0
 optax==0.2.2
 optree==0.11.0
 orbax-checkpoint==0.5.15
-packaging==24.0
+orjson==3.10.3
+overrides==7.7.0
+packaging==23.2
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==10.3.0
+platformdirs==4.2.2
+prometheus_client==0.20.0
+prompt_toolkit==3.0.46
 protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
 Pygments==2.18.0
+PyJWT==2.8.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-engineio==4.9.1
+python-json-logger==2.0.7
+python-multipart==0.0.9
+python-socketio==5.11.2
+pytz==2024.1
 PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+referencing==0.35.1
 regex==2024.5.15
 requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
 rich==13.7.1
+rpds-py==0.18.1
 safetensors==0.4.3
+scikit-learn==1.5.0
 scipy==1.13.1
+seaborn==0.13.2
+Send2Trash==1.8.3
+simple-websocket==1.0.0
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+starlette==0.37.2
 sympy==1.12.1
+syncer==2.0.3
+tenacity==8.3.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
 tensorflow-io-gcs-filesystem==0.37.0
 tensorstore==0.1.60
 termcolor==2.4.0
+terminado==0.18.1
+threadpoolctl==3.5.0
+tinycss2==1.3.0
 tokenizers==0.19.1
+tomli==2.0.1
 toolz==0.12.1
 torch==2.3.0
 torchvision==0.18.0
+tornado==6.4
 tqdm==4.66.4
+traitlets==5.14.3
 transformers==4.41.2
+types-python-dateutil==2.9.0.20240316
+typing-inspect==0.9.0
 typing_extensions==4.12.1
+tzdata==2024.1
+uptrace==1.24.0
+uri-template==1.3.0
 urllib3==2.2.1
+uvicorn==0.25.0
+watchfiles==0.20.0
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.8.0
 Werkzeug==3.0.3
+widgetsnbextension==4.0.11
 wrapt==1.16.0
+wsproto==1.2.0
+xgboost==2.0.3
+yarl==1.9.4
 zipp==3.19.1
